# rtts

./: .gitignore  Dockerfile  README.md  application.py  config.py  pyproject.toml  requirements.txt  start.sh
static/: app.js  index.js  package-lock.json  package.json  vendor.js  webpack.config.js
static/css/: index.css  realtime.css
static/templates/: tweet.njk
templates/: index.html  realtime.html
